0.23	2019-09-06

    * Move pod tests to xt

0.22	2019-09-02

    * Add --list-cc
    * Add cpanfile
    * Add -U / --skip-undef
    * Provide cpanfile
    * Add help and options to examples/speedtest-graph.pl
    * Fix warning when using --no-upload or --no-download (issue#13)

0.21	2019-03-21

    * Add --csv-eol-unix

0.20	2019-01-01

    * Versions
    * It's 2017
    * Show a ranked summary of the tries with --try
    * It's 2018
    * Deal with proxy settings in env
    * Add index to list/ping lists
    * It's 2019

0.19	2016-01-02

    * Try multiple addresses for the server list RT#110400
    * It's 2016

0.18	2015-10-10

    * Add --prtg option
    * Add --bytes option
    * Cleanup code to calculate average

0.17	2015-03-27

    * Add graph example
    * Update version in .pm

0.16	2015-02-11

    * Set a limit of 40 of the number of hosts to ping
    * Remove perl recommendation from META as it breaks cpan clients

0.15	2015-01-15

    * Renamed to speedtest
    * Do not report/show origin on --list & --ping
    * Documentation/Manual + --man and --info
    * Put on CPAN

0.12	2015-01-24

    * Add --csv
    * Update README

0.11	2015-01-21

    * Add --timeout
    * Update copyright
    * Warning about speedtest not being ping
    * Data::Peek optional (but still recommended)
    * Fallback to distance in absence of GEO-IP

0.10	2014-12-17

    * Add latency for --mini and --url
    * Optionally show server IP
    * Don't show full path in help
    * Fix typo in help (issue#4)
    * Empty line separation in multi-host tests (issue#7)
    * Make README more github-like
    * Add Debian info for requirements
    * Contribution update
    * Browser-neutral agent-ident

0.09	2014-12-02

    * Improve --help
    * Add --simple (alias for -v0)
    * Implement --mini

0.08	2014-11-30

    * Report latency in ms
    * Shorten timeouts on detecting server speeds

0.07	2014-11-26

    * Allow fetching list off ALL servers
    * Country codes (upper case)