@@ -1,6 +1,7 @@
 0.23	2019-09-06
 
     * Move pod tests to xt
+    * Add simple tests for basic CLI
 
 0.22	2019-09-02
 
